fix overflow card at xxl desktop

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ footer {
 }
 
 #cards-container .card {
-    max-height: 360px;
+    max-height: 560px;
 }
 
 span.product-price::after {
